--- a/08_RAGs/02_classification_driven_agent.ipynb
+++ b/08_RAGs/02_classification_driven_agent.ipynb
@@ -92,14 +92,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "c29d2c71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-4o\")\n",
+    "\n",
+    "def format_docs(docs): \n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
+    "rag_chain = prompt | llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e4773813",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Annotated, Literal, TypedDict\n",
+    "from langchain_core.messages import BaseMessage, HumanMessage, AIMessage\n",
+    "from langchain.schema import Document\n",
+    "\n",
+    "class AgentState(TypedDict):\n",
+    "    messages: list[BaseMessage]\n",
+    "    documents: list[Document]\n",
+    "    on_topic: str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afd1fede",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be12f6f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "b7da1d10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class AgentState(TypedDict):\n",
-    "    messages: Annotated[List[str],add_messages]\n",
-    "\n",
     "\n",
     "llm = ChatOpenAI(model='gpt-4o-mini')\n",
     "\n",
