--- a/08_RAGs/02_classification_driven_agent.ipynb
+++ b/08_RAGs/02_classification_driven_agent.ipynb
@@ -128,11 +128,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "afd1fede",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pydantic import BaseModel, Field\n",
+    "\n",
+    "class GradeQuestion(BaseModel):\n",
+    "    \"\"\"Bollean value to check wheather a question is related to the peak Peak Performance Gym\"\"\"\n",
+    "\n",
+    "    score: str = Field(\n",
+    "        description = \"Question is about gym? If yes -> 'Yes' in not -> 'No'\"\n",
+    "    )\n",
+    "\n",
+    "def question_classifier(state: AgentState):\n",
+    "    question = ['messages'][-1].content\n",
+    "    system = \"\"\"\n",
+    "    You are a classifier that determines whether a user's question is about one of the following topics \n",
+    "    \n",
+    "    1. Gym History & Founder\n",
+    "    2. Operating Hours\n",
+    "    3. Membership Plans \n",
+    "    4. Fitness Classes\n",
+    "    5. Personal Trainers\n",
+    "    6. Facilities & Equipment\n",
+    "    \n",
+    "    If the question IS about any of these topics, respond with 'Yes'. Otherwise, respond with 'No'\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    grade_prompt = ChatPromptTemplate.from_messages(\n",
+    "        [\n",
+    "            (\"system\", system), \n",
+    "            (\"human\", \"User question: {question}\")\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    llm = ChatOpenAI(model=\"gpt-4o\")\n",
+    "    structured_llm = llm.with_structured_output(GradeQuestion)\n",
+    "    grader_llm = grade_prompt | structured_llm\n",
+    "    result = grader_llm.invoke({\"question\": question})\n",
+    "    \n",
+    "    state[\"on_topic\"] = result.score\n",
+    "\n",
+    "    return state\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -140,7 +181,89 @@
    "id": "be12f6f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def on_topic_router(state: AgentState): \n",
+    "    on_topic = state[\"on_topic\"]\n",
+    "    if on_topic.lower() == \"yes\":\n",
+    "        return \"on_topic\"\n",
+    "    return \"off_topic\"\n",
+    "\n",
+    "\n",
+    "def retrieve(state: AgentState):\n",
+    "    question = state[\"messages\"][-1].content\n",
+    "    documents = retriever.invoke(question)\n",
+    "    state[\"documents\"] = documents\n",
+    "    return state\n",
+    "\n",
+    "\n",
+    "def generate_answer(state: AgentState): \n",
+    "    question = state[\"messages\"][-1].content\n",
+    "    documents = state[\"documents\"]\n",
+    "    generation = rag_chain.invoke({\"context\": documents, \"question\": question})\n",
+    "    state[\"messages\"].append(generation)\n",
+    "\n",
+    "def off_topic_response(state: AgentState): \n",
+    "    state[\"messages\"].append(AIMessage(content=\"I'm sorry! I cannot answer this question!\"))\n",
+    "    return state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "992a4434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.graph import StateGraph, END\n",
+    "\n",
+    "workflow = StateGraph(AgentState)\n",
+    "\n",
+    "workflow.add_node(\"topic_decision\", question_classifier)\n",
+    "workflow.add_node(\"off_topic_response\", off_topic_response)\n",
+    "workflow.add_node(\"retrieve\", retrieve)\n",
+    "workflow.add_node(\"generate_answer\", generate_answer)\n",
+    "\n",
+    "workflow.add_conditional_edges(\n",
+    "    \"topic_decision\", \n",
+    "    on_topic_router, \n",
+    "    {\n",
+    "        \"on_topic\": \"retrieve\", \n",
+    "        \"off_topic\": \"off_topic_response\"\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "workflow.add_edge(\"retrieve\", \"generate_answer\")\n",
+    "workflow.add_edge(\"generate_answer\", END)\n",
+    "workflow.add_edge(\"off_topic_response\", END)\n",
+    "\n",
+    "workflow.set_entry_point(\"topic_decision\")\n",
+    "graph = workflow.compile()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a970397f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.invoke(input={\n",
+    "    \"messages\": [HumanMessage(content=\"Who is the owner and what are the timings?\")]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2beb1993",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph.invoke(input={\n",
+    "    \"messages\": [HumanMessage(content=\"What does the company Apple do?\")]\n",
+    "})"
+   ]
   },
   {
    "cell_type": "code",
